--- a/mentah/index.html
+++ b/mentah/index.html
@@ -7,8 +7,8 @@
 
   <title>Web</title>
 
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
-      <link href="assets/css/alpha.css" rel="stylesheet">
+    <link href="../assets/css/bootstrap.min.css" rel="stylesheet">
+      <link href="../assets/css/alpha.css" rel="stylesheet">
 
 </head>
 <body>
@@ -39,7 +39,7 @@
 <section class="content">
   <div class="container">
     <div class="col-lg-3">
-      <img src="assets/images/logo.png" alt="" class="logo-content">
+      <img src="../assets/images/logo.png" alt="" class="logo-content">
 
       <div class="content-menu-line"></div>
       <div class="content-menu">
@@ -55,9 +55,9 @@
 
       <div class="">
         <div class="image">
-          <img src="assets/images/10.jpg" alt="" class="largeImage col-lg-12" width = "100%">
+          <img src="../assets/images/10.jpg" alt="" class="largeImage col-lg-12" width = "100%">
 
-          <img src="assets/images/10.jpg" alt="" class="smallImage col-lg-8" width = "100%">
+          <img src="../assets/images/10.jpg" alt="" class="smallImage col-lg-8" width = "100%">
           <div class="col-lg-4">
             <p class="ourMotto">
               Designing is not just about the final outcome, the process of designing a beauty on its own. Every great design begins with an even better story
@@ -75,19 +75,19 @@
 
 <section class="Gallery">
   <a href = "#">
-    <div class="galleryResidence galleryMenu" style="background-image : url('assets/images/menu1.jpg');"><div class="galleryMargin"></div>
+    <div class="galleryResidence galleryMenu" style="background-image : url('../assets/images/menu1.jpg');"><div class="galleryMargin"></div>
       <div class="galleryText">RESIDENCE</div>
     </div>
   </a>
   <a href = "#">
-    <div class="galleryComercial galleryMenu" style="background-image : url('assets/images/menu2.jpg');"><div class="galleryMargin"></div>
+    <div class="galleryComercial galleryMenu" style="background-image : url('../assets/images/menu2.jpg');"><div class="galleryMargin"></div>
       <div class="galleryText">COMERCIAL</div>
     </div>
   </a>
 </section>
 
 
-<section class="parallax-window2" data-parallax="scroll" data-image-src="assets/images/10.jpg"></section>
+<section class="parallax-window2" data-parallax="scroll" data-image-src="../assets/images/10.jpg"></section>
 
 
 <section class="content-whatWeDo">
@@ -110,7 +110,7 @@
         <div class="image">
           <div class="col-lg-4 serviceType">
             <h3 class="col-lg-12 wwdTitle"><center>1. CONSTRUCTION</center></h3>
-            <img src="assets/images/10.jpg" alt="" class="" width = "100%">
+            <img src="../assets/images/10.jpg" alt="" class="" width = "100%">
             <ul class="serviceList">
               <li>Residence</li>
               <li>Elite Residence</li>
@@ -120,7 +120,7 @@
 
           <div class="col-lg-4 serviceType">
             <h3 class="col-lg-12 wwdTitle"><center>2. INTERIOR</center></h3>
-            <img src="assets/images/10.jpg" alt="" class="" width = "100%">
+            <img src="../assets/images/10.jpg" alt="" class="" width = "100%">
             <ul class="serviceList">
               <li>Intrior space Planning</li>
               <li>Interior Decoration</li>
@@ -130,7 +130,7 @@
 
           <div class="col-lg-4 serviceType">
             <h3 class="col-lg-12 wwdTitle"><center>3. RENOVATION</center></h3>
-            <img src="assets/images/10.jpg" alt="" class="" width = "100%">
+            <img src="../assets/images/10.jpg" alt="" class="" width = "100%">
             <ul class="serviceList">
               <li>Residence</li>
               <li>Elite Residence</li>
@@ -147,7 +147,7 @@
 </section>
 
 
-  <section class="parallax-window2" data-parallax="scroll" data-image-src="assets/images/10.jpg"></section>
+  <section class="parallax-window2" data-parallax="scroll" data-image-src="../assets/images/10.jpg"></section>
 
 
 
@@ -159,27 +159,27 @@
       <div class="col-lg-12">
 
         <ul class="marketingPhone"><li  class="col-lg-1"></li>
-          <li  class="col-lg-2"><div class="contact-profile-picture"><img src="assets/images/kotak2.png"/></div>
+          <li  class="col-lg-2"><div class="contact-profile-picture"><img src="../assets/images/kotak2.png"/></div>
             <span class="contact-name">Sidharta Setiawan Japar, S.T.</span> <br>
             <span class="contact-details">(+62) 812 7811 2800<br>
             Sidhartasj@arcon.com</span></li>
 
-          <li  class="col-lg-2"><div class="contact-profile-picture"><img src="assets/images/kotak2.png"/></div>
+          <li  class="col-lg-2"><div class="contact-profile-picture"><img src="../assets/images/kotak2.png"/></div>
             <span class="contact-name">Bayu Adi, S.T.</span> <br>
             <span class="contact-details">(+62) 812 2389 7080<br>
             Bayuadi@arcon.com</span></li>
 
-          <li  class="col-lg-2"><div class="contact-profile-picture"><img src="assets/images/kotak2.png"/></div>
+          <li  class="col-lg-2"><div class="contact-profile-picture"><img src="../assets/images/kotak2.png"/></div>
             <span class="contact-name">Trinti Filiani, S.Ars.</span> <br>
             <span class="contact-details">(+62) 812 7178 7788<br>
             Trinti@arcon.com</span></li>
 
-          <li  class="col-lg-2"><div class="contact-profile-picture"><img src="assets/images/kotak2.png"/></div>
+          <li  class="col-lg-2"><div class="contact-profile-picture"><img src="../assets/images/kotak2.png"/></div>
             <span class="contact-name">Leily</span> <br>
             <span class="contact-details">(+62) 812 712 9839<br>
             admininterior@arcon.com</span></li>
 
-          <li  class="col-lg-2"><div class="contact-profile-picture"><img src="assets/images/kotak2.png"/></div>
+          <li  class="col-lg-2"><div class="contact-profile-picture"><img src="../assets/images/kotak2.png"/></div>
             <span class="contact-name">Cindy Coleen, S.T.</span> <br>
             <span class="contact-details">(+62) 823 7289 1268<br>
             cindycoleen@arcon.com</span></li>
@@ -197,7 +197,7 @@
     <div class="container">
       <div class="col-lg-3">
 
-          <img src="assets/images/logo.png" alt="" class="logo-footer">
+          <img src="../assets/images/logo.png" alt="" class="logo-footer">
       </div>
       <div class="col-lg-9">
         <div class="col-lg-6">
@@ -236,8 +236,8 @@ please visit us or contact our phone number above:</p>
 
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script src="assets/js/bootstrap.min.js"></script>
-  <script src="assets/js/parallax.js"></script>
+  <script src="../assets/js/bootstrap.min.js"></script>
+  <script src="../assets/js/parallax.js"></script>
 
 
   <script>
